# actor-framework-recipe

./: Cargo.toml  HOWTO.md  README.md  architecture.md
.github/workflows/: ci.yml  docs.yml
crates/actor-framework/: Cargo.toml
crates/actor-framework/src/: actor.rs  client.rs  client_trait.rs  entity.rs  error.rs  lib.rs  message.rs  mock.rs  tracing.rs
crates/actor-sample/: Cargo.toml
crates/actor-sample/src/: lib.rs  main.rs
crates/actor-sample/src/clients/: actor_client.rs  mod.rs  order_client.rs  product_client.rs  user_client.rs
crates/actor-sample/src/lifecycle/: mod.rs  order_system.rs
crates/actor-sample/src/model/: mod.rs  order.rs  product.rs  user.rs
crates/actor-sample/src/order_actor/: entity.rs  mod.rs
crates/actor-sample/src/product_actor/: actions.rs  entity.rs  mod.rs
crates/actor-sample/src/user_actor/: entity.rs  mod.rs
crates/actor-sample/tests/: integration_test.rs  order_actor_test.rs
src/: integration_tests.rs  lib.rs  main.rs
src/app_system/: order_system.rs
src/clients/: actor_client.rs  mod.rs  order_client.rs  product_client.rs  traits.rs  user_client.rs
src/domain/: mod.rs  order.rs  product.rs  user.rs
src/framework/: core.rs  mock.rs  mod.rs
src/lifecycle/: mod.rs  order_system.rs  tracing.rs
src/model/: mod.rs  order.rs  product.rs  user.rs
src/order_actor/: entity.rs  error.rs  mod.rs
src/product_actor/: actions.rs  entity.rs  error.rs  mod.rs
src/runtime/: order_system.rs  tracing.rs
src/user_actor/: entity.rs  error.rs  mod.rs
tests/: integration_test.rs  order_actor_test.rs
(+1 files in other folders)
