[package]
name = "actor-recipe"
version = "0.1.0"
edition = "2021"



[dependencies]
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
