[package]
name = "actor-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actor-framework = { path = "../actor-framework" }
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0.17"
